<resources>
    <string name="app_name" translatable="false">Eatudiant</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="register_failed">Register failed</string>
    <string name="go_to_sign_in">Go to sign in</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_recipe_details">RecipeDetailsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add_recipe">Add recipe</string>

    <string name="menu_recipe">Recipe</string>
    <string name="menu_map">Map</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="recipe_likes">Recipes Likes</string>
    <string name="account">Account</string>

    <!-- Recipes Preferences -->
    <string name="save_like_title">Save Like</string>
    <string name="reply_title">Default reply action</string>
    <string name="save_like_summary_on">Keep your likes local</string>
    <string name="save_like_summary_off">Automatically save your</string>

    <!-- Account Preferences -->
    <string name="edit_email">Your Email</string>
    <string name="logout">Logout</string>
    <string name="maps_api_key">${MAPS_API_KEY}</string>
    <string name="password_dont_match">Passwords don\'t match each other</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_marker_title">Marker</string>
    <string name="pick_place">Pick a place to list</string>
    <string name="price_word">price</string>
    <string name="people_word">people</string>
    <string name="ingredients">Ingredients</string>
    <string name="hello_there_welcome_back">Hello there, Welcome Back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="new_user">New user ?</string>
    <string name="the_hottest_recipes_near_you_lt_3"><![CDATA[the hottest recipes near you <3]]></string>
    <string name="hello_welcome">hello, welcome</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="cookware">cookware</string>
    <string name="ingredient">INGREDIENT</string>
    <string name="recipes_list">Recipes list</string>
    <string name="recipe_steps">RECIPE STEPS</string>
    <string name="next">Next</string>
    <string name="prev">Prev.</string>
    <string name="sign_in">Login</string>


</resources>
